# extended_variant

./: CMakeLists.txt  LICENSE  README.md  extended_variant.h  main.cpp  unittests.cpp
